@@ -29,6 +29,7 @@ Version 1.0.xxx (August xxth 2013)
 - Fixed: Razberry Dimmer On/Off command
 - Implemented: WU, extra protection for wind speed/gust
 - Changed: iPhone/iPad shortcut icon
+- Implemented: Raspberry Pi camera parameters
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
